--- a/html/raman.css
+++ b/html/raman.css
@@ -94,7 +94,7 @@ section {
 }
 
 #section2 {
-    background-image: url('c:\\Users\\yooyh\\OneDrive\\바탕 화면\\html\\라만1.png');
+    background-image: url('https://github.com/dlk0909/raman.github.io/blob/main/html/%EB%9D%BC%EB%A7%8C1.png');
     background-repeat: no-repeat;
     background-size: 100%;
     /* 이미지 로딩 전 백그라운드 색상을 흰색으로 설정 */
