--- a/html/raman.css
+++ b/html/raman.css
@@ -64,7 +64,7 @@ section {
 }
 
 #section1 {
-    background-image: url('c:\\Users\\yooyh\\OneDrive\\바탕 화면\\html\\라만2.jpeg');
+    background-image: url('https://github.com/dlk0909/raman.github.io/blob/main/html/%EB%9D%BC%EB%A7%8C2.jpeg');
     background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
